correctly deletes copied files/folders